# RAG-QA-system

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: exceptions.py  main.py
app/config/: schemas.py  settings.py
app/db/: crud.py  database.py  models.py
app/endpoints/: rag_endpoints.py
app/utils/: mock_data.py  utils.py
